# papr

./: Cargo.toml  README.md
src/: cli.rs  config.rs  lib.rs  mailbox.rs  main.rs  renderer.rs  utils.rs
src/config/: renderer.rs
src/mailbox/: message.rs
src/mailbox/message/: body.rs  header.rs
src/mailbox/samples/: multi_patches.mbx  single_patch.mbx
src/parser/: mail.rs  mailbox.rs
src/parser/mailbox/: message.rs
src/parser/mailbox/message/: header.rs
src/parser/mailbox/samples/: multi_patches.mbx
tests/samples/: multi_foo_messages.mbx  single_patch.mbx
