[package]
name = "papr"
version = "0.1.0"
edition = "2021"
description = "A simple CLI syntax highlighting tool for email files"
repository = "https://github.com/OJarrisonn/papr"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }
color-eyre = "0.6.3"
color-print = "0.3.7"
rayon = "1.10.0"
regex = "1.11.1"

[lints.rust]
warnings = "deny"
